# Helixir

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
helixir/: __init__.py  __main__.py  blast.py  cli.py  display.py  excel_writer.py  io_parser.py  parameters.py  physico.py  pipeline.py  predict.py
tests/: test_cli.py  test_predict.py
