[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "helixir"
version         = "2.0.0"
description     = "Peptide secondary structure prediction (Chou-Fasman + GOR IV) with Excel output"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.9"
authors         = [{ name = "Your Name", email = "you@example.com" }]
keywords        = ["bioinformatics","peptide","protein","secondary-structure","chou-fasman","gor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "biopython>=1.80",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "colorama>=0.4",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.scripts]
helixir = "helixir.cli:main"

[project.urls]
Homepage  = "https://github.com/your-username/helixir"
Issues    = "https://github.com/your-username/helixir/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["helixir*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
