[metadata]
name             = helixir
version          = 2.0.0

[options]
packages         = find:
python_requires  = >=3.9
install_requires =
    biopython>=1.80
    openpyxl>=3.1
    pandas>=2.0
    colorama>=0.4
    tabulate>=0.9

[options.entry_points]
console_scripts =
    helixir = helixir.cli:main

[options.extras_require]
dev =
    pytest>=7
    pytest-cov
    ruff
